--- a/scss/style.scss
+++ b/scss/style.scss
@@ -258,32 +258,35 @@ a:hover{
         text-transform: uppercase;
         padding-bottom: 5px;
     }
-    .team_item_main{
+.team_item_main{
         padding-top: 80px;
        
         &:hover{
-            transition: .5s;
+            transition: 1s;
             transform: translateY(-50px);
             -webkit-transform: translateY(-50px);
             -moz-transform: translateY(-50px);
             -ms-transform: translateY(-50px);
             -o-transform: translateY(-50px);
             cursor: pointer;
-            -webkit-transition: .5s;
-            -moz-transition: .5s;
-            -ms-transition: .5s;
-            -o-transition: .5s;
-            &:hover .image-over{
+            -webkit-transition: 1s;
+            -moz-transition: 1s;
+            -ms-transition: 1s;
+            -o-transition: 1s;
+            .image-over
+                  {
                 transform: scale(1);
                 -webkit-transform: scale(1);
                 -moz-transform: scale(1);
                 -ms-transform: scale(1);
                 -o-transform: scale(1);
+                }
        }
-       .image_text p{
-        display: block;
+
+       &:hover .image_text p{
+        opacity: 1;
        }
-}
+
         .image{
             width: 100%;
             position: relative;
@@ -302,13 +305,14 @@ a:hover{
                 ul{
                 margin-left: 160px;
                 margin-top: 70px;
-               } li{
+                li{
                     color: #fff;
                     padding: 10px;
                     text-align: center;
                     border: 1px solid black;
                     margin: 10px;
                 }
+               } 
 }
         }
         .image_text{
@@ -329,8 +333,244 @@ a:hover{
             font-family: 'Poppins', sans-serif;
             font-weight: 400;
             font-size: 13px;
-            display: none;
+            opacity: 0;
         }
     }
 
+}
+
+#testi_main1{
+    padding-top: 50px 0;
+    .header_text{
+        h2{
+            font-family: 'Oswald', sans-serif;
+            font-weight: 400;
+            font-size: 22px;
+            text-transform: uppercase;
+        }
+    }
+    .testimonial{
+        background: linear-gradient(rgba(0, 0, 0, 0.61), rgba(0, 0, 0, 0.61)),
+        url(../images/testimonialbackground.jpg) no-repeat center / cover;
+        padding: 50px 0;
+        .testi-item{
+            padding: 0 20px;
+        }
+        h3{
+            font-family: 'Oswald', sans-serif;
+            font-weight: 400;
+            font-size: 18px;
+            text-transform: uppercase;
+            color: #fff;
+        }
+        h4{
+            font-family: 'Oswald', sans-serif;
+            font-weight: 400;
+            font-size: 16px;
+            text-transform: uppercase;
+            color: #fff;
+            line-height: 0px;
+            padding: 5px 0;
+        }
+        i{
+            color: #e23e38;
+        }
+        p{
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400;
+            font-size: 13px;
+            color: #fff;
+        }
+    }
+}
+
+.slick-slider .slick-dots{
+    position: absolute;
+    top: 180px;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    li{
+        margin: 10px;
+        button {
+            height: 20px;
+            width: 20px;
+            border: none;
+            border-radius: 50%;
+            border: 1px solid #fff;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            outline: none;
+            text-indent: -9999px;
+            background: transparent;
+           
+}
+&.slick-active {
+    button {
+        background: #fd0000;
+        
+    }
+}
+    }
+}
+
+#membership{
+    padding: 50px 0;
+    .header_text{
+        padding-bottom: 30px;
+    } 
+    h2{
+        font-family: 'Oswald', sans-serif;
+        font-weight: 400;
+        font-size: 22px;
+        text-transform: uppercase;
+    }
+    
+    .member_main{
+       
+        .member_item{
+            width: 32% !important;
+            border: 1px solid;
+            padding: 0px;
+            &:hover{
+                box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+                cursor: pointer;
+                h3{
+                    background: #e23e38;
+                    color: #fff;
+                    transition: .5s;
+                }
+                .button a{
+                    color: #fff;
+                    transition: .5s;
+                }
+                .button{
+                    transition: .5s;
+                    background: #e23e38;
+                    -webkit-transition: .5s;
+                    -moz-transition: .5s;
+                    -ms-transition: .5s;
+                    -o-transition: .5s;
+    }
+            }
+        }
+        
+        .inner_image{
+            background: linear-gradient(rgba(0, 0, 0, 0.699), rgba(0, 0, 0, 0.705)),
+            url(../images/pricingplan1.jpg) no-repeat center / cover;
+            padding: 25px 0;
+        }
+        
+       h3{
+            font-family: 'Oswald', sans-serif;
+            font-weight: 400;
+            font-size: 18px;
+            text-transform: uppercase;
+            padding: 10px 0;
+            background: #dddddd;
+            margin-bottom: 0px;
+        }
+        .inner_image h4{
+            font-family: 'Oswald', sans-serif;
+            font-weight: 500;
+            font-size: 50px;
+            text-transform: uppercase;
+            color: #fff;
+            span{
+                font-size: 25px;
+            }
+            
+        }
+        .offers{
+            padding-top: 30px;
+        } p{
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 30px;
+        }
+        .button{
+            padding: 4px 0;
+            background: #dddddd;
+            a{
+                color: #000;
+                font-family: 'Oswald', sans-serif;
+                font-weight: 400;
+                font-size: 22px;
+                text-transform: uppercase;
+            }
+        }
+
+    } 
+}
+
+#countermain{
+    background: linear-gradient(rgba(0, 0, 0, 0.699), rgba(0, 0, 0, 0.705)),
+    url(../images/countercover.jpg) no-repeat center / cover;
+    padding: 25px 0;
+    .counter_main h4{
+        font-family: 'Oswald', sans-serif;
+        font-weight: 500;
+        font-size: 50px;
+        color: #fff;
+    }
+    p{
+        font-family: 'Oswald', sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        color: #fff;
+    }
+}
+
+#classe{
+    padding: 50px 0;
+    .header_text h2{
+        font-family: 'Oswald', sans-serif;
+        font-weight: 400;
+        font-size: 22px;
+        text-transform: uppercase;
+    }
+    .week{
+        margin-top: 20px;
+        p{
+            font-family: 'Oswald', sans-serif;
+            font-weight: 400;
+            font-size: 18px;
+            text-transform: uppercase;
+        }
+        .days{
+            background: #dddddd;
+            padding-top: 10px;
+            &:hover{
+                box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+                background: #e23e38;
+                cursor: pointer;
+                transition: .5s;
+                -webkit-transition: .5s;
+                -moz-transition: .5s;
+                -ms-transition: .5s;
+                -o-transition: .5s;
+         }
+        }
+    } 
+    .yoga_main{
+        padding-top: 30px;
+        h3{
+            font-family: 'Oswald', sans-serif;
+            font-weight: 400;
+            font-size: 13px;
+        }
+        .classpart{
+            background: #dddddd;
+            padding: 30px;
+            margin: 2px;
+            &:hover{
+                box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+                background: #e23e38;
+                cursor: pointer;
+            }
+        }
+    }
 }
