--- a/scss/black.scss
+++ b/scss/black.scss
@@ -1,7 +1,7 @@
 @import "all_common";
-@import "switcher";
-
-
+body{
+    background: #000;
+}
 .backtotop{
     display: none;
 }
@@ -51,7 +51,6 @@
     -ms-transition: .5s;
     -o-transition: .5s;
 }
-
 
 .nav_main{
     background: rgba(16, 16, 16, 0.712);
@@ -200,7 +199,7 @@ a{
     font-weight: 400;
     font-size: 16px;
     color: #ffffff; 
-    background-color: #e23e38;
+    background-color: #000000;
     padding: 5px 20px;
     border: 2px solid transparent;
     margin-left: 20px;
@@ -222,16 +221,19 @@ a:hover{
         line-height: 0px;
         text-transform: uppercase;
         padding-bottom: 5px;
+        color: #ffffff; 
     }
     p{
         font-family: 'Poppins', sans-serif;
         font-weight: 400;
         font-size: 14px;
+        color: #ffffff; 
     }
     span{
         font-family: 'Poppins', sans-serif;
         font-weight: 400;
         font-size: 14px;
+        color: #ffffff; 
     }
 }
 #gallery{
@@ -265,7 +267,7 @@ a:hover{
                 top: 0;
                 height: 100%;
                 width: 100%;
-                background: rgba(113, 31, 28, 0.5);
+                background: rgba(15, 15, 15, 0.5);
                 transform: scale(0);
                 -webkit-transform: scale(0);
                 -moz-transform: scale(0);
@@ -297,6 +299,7 @@ a:hover{
         line-height: 0px;
         text-transform: uppercase;
         padding-bottom: 5px;
+        color: #ffffff; 
     }
 }
 
@@ -309,6 +312,7 @@ a:hover{
         line-height: 0px;
         text-transform: uppercase;
         padding-bottom: 5px;
+        color: #ffffff; 
     }
 .team_item_main{
         padding-top: 80px;
@@ -352,7 +356,7 @@ a:hover{
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: rgba(113, 31, 28, 0.5);
+                background: rgba(12, 12, 12, 0.5);
                 transform: scale(0);
                 -webkit-transform: scale(0);
                 -moz-transform: scale(0);
@@ -378,19 +382,23 @@ a:hover{
             font-weight: 400;
             font-size: 16px;
             text-transform: uppercase;
+            color: #ffffff; 
         }
         h4{
             font-family: 'Oswald', sans-serif;
             font-weight: 400;
             font-size: 14px;
             text-transform: uppercase;
+            color: #ffffff; 
         }
         p{
             font-family: 'Poppins', sans-serif;
             font-weight: 400;
             font-size: 13px;
             opacity: 0;
+            color: #ffffff; 
         }
+
     }
 
 }
@@ -403,6 +411,7 @@ a:hover{
             font-weight: 400;
             font-size: 22px;
             text-transform: uppercase;
+            color: #ffffff; 
         }
     }
     .testimonial{
@@ -429,7 +438,7 @@ a:hover{
             padding: 5px 0;
         }
         i{
-            color: #e23e38;
+            color: #000000;
         }
         p{
             font-family: 'Poppins', sans-serif;
@@ -465,7 +474,7 @@ a:hover{
 }
 &.slick-active {
     button {
-        background: #fd0000;
+        background: #000000;
         
     }
 }
@@ -482,19 +491,20 @@ a:hover{
         font-weight: 400;
         font-size: 22px;
         text-transform: uppercase;
+        color: #ffffff; 
     }
     
     .member_main{
        
         .member_item{
             width: 32% !important;
-            border: 1px solid;
+            border: 1px solid #fff;
             padding: 0px;
             &:hover{
-                box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
+                box-shadow: 0px 5px 10px 0px rgba(250, 250, 250, 0.5); 
                 cursor: pointer;
                 h3{
-                    background: #e23e38;
+                    background: #000000;
                     color: #fff;
                     transition: .5s;
                 }
@@ -504,7 +514,7 @@ a:hover{
                 }
                 .button{
                     transition: .5s;
-                    background: #e23e38;
+                    background: #000000;
                     -webkit-transition: .5s;
                     -moz-transition: .5s;
                     -ms-transition: .5s;
@@ -546,6 +556,7 @@ a:hover{
             font-weight: 400;
             font-size: 16px;
             line-height: 30px;
+            color: #ffffff; 
         }
         .button{
             padding: 4px 0;
@@ -587,6 +598,7 @@ a:hover{
         font-weight: 400;
         font-size: 22px;
         text-transform: uppercase;
+        color: #ffffff; 
     }
     .week{
         margin-top: 20px;
@@ -602,7 +614,7 @@ a:hover{
             padding: 10px 0;
             &:hover{
                 box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5); 
-                background: #e23e38;
+                background: #000000;
                 cursor: pointer;
                 transition: .5s;
                 -webkit-transition: .5s;
@@ -645,6 +657,7 @@ a:hover{
         left: 40px;
         font-size: 30px;
         z-index: 999;
+        color: #0051ff;
     }
     .prev{
         position: absolute;
@@ -652,6 +665,7 @@ a:hover{
         right: 40px;
         font-size: 30px;
         z-index: 999;
+        color: #0051ff; 
     }
   
 }
